[NEW] Header et switch entre les onglets + refacto

--- a/flashcards/src/main/resources/tn/flashcards/fxml/edit-view.fxml
+++ b/flashcards/src/main/resources/tn/flashcards/fxml/edit-view.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.flashcards.controller.EditController">
+<AnchorPane fx:controller="tn.flashcards.controller.EditController" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label alignment="CENTER" layoutX="247.0" layoutY="173.0" prefHeight="55.0" prefWidth="106.0" text="Edition" />
    </children>
