--- a/flashcards/src/main/resources/tn/flashcards/css/style.css
+++ b/flashcards/src/main/resources/tn/flashcards/css/style.css
@@ -13,3 +13,13 @@
     -fx-font-weight: bold;
     -fx-font-family: "Arial Rounded MT Bold";
 }
+
+.tableStack {
+    -fx-text-alignment: center;
+    -fx-font-size: 17px;
+    -fx-font-family: "Reem Kufi";
+}
+
+.view {
+    -fx-padding: 15px;
+}
