--- a/flashcards/src/main/resources/tn/flashcards/fxml/edit-view.fxml
+++ b/flashcards/src/main/resources/tn/flashcards/fxml/edit-view.fxml
@@ -5,18 +5,18 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" styleClass="view" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.flashcards.controller.EditController">
+<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefWidth="1000.0" styleClass="view" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.flashcards.controller.EditController">
    <center>
       <TableView fx:id="table" styleClass="tableStack" stylesheets="@../css/style.css" tableMenuButtonVisible="true" BorderPane.alignment="CENTER">
         <columns>
-          <TableColumn fx:id="cName" prefWidth="166.0" text="Nom de la pile 🖉" />
-          <TableColumn fx:id="cNb" prefWidth="84.0" text="Nb. cartes" />
-            <TableColumn fx:id="cTags" prefWidth="149.0" text="Tags 🖉" />
-            <TableColumn fx:id="cCreateur" minWidth="4.0" prefWidth="120.0" text="Créateur" />
-            <TableColumn fx:id="cDate" minWidth="0.0" prefWidth="151.0" text="Dernière utilisation" />
-            <TableColumn fx:id="cEdit" editable="false" minWidth="0.0" prefWidth="30.0" sortable="false" />
-            <TableColumn fx:id="cEdit" editable="false" minWidth="0.0" prefWidth="30.0" sortable="false" />
-            <TableColumn fx:id="cDelete" editable="false" maxWidth="30.0" minWidth="0.0" prefWidth="130.0" sortable="false" />
+          <TableColumn fx:id="cName" prefWidth="149.59997862577438" text="Nom de la pile 🖉" />
+          <TableColumn fx:id="cNb" prefWidth="88.0" text="Nb. cartes" />
+            <TableColumn fx:id="cTags" prefWidth="68.80001831054688" text="Tags 🖉" />
+            <TableColumn fx:id="cCreateur" minWidth="0.0" prefWidth="76.7999267578125" text="Créateur" />
+            <TableColumn fx:id="cDate" minWidth="0.0" prefWidth="153.0" text="Dernière utilisation" />
+            <TableColumn fx:id="cEdit" editable="false" minWidth="0.0" prefWidth="33.0" sortable="false" />
+            <TableColumn fx:id="cDelete" editable="false" minWidth="0.0" prefWidth="188.0" sortable="false" />
+            <TableColumn fx:id="cExport" editable="false" prefWidth="107.0" sortable="false" />
         </columns>
          <BorderPane.margin>
             <Insets />
