--- a/flashcards/src/main/resources/tn/flashcards/fxml/edit-pile-view.fxml
+++ b/flashcards/src/main/resources/tn/flashcards/fxml/edit-pile-view.fxml
@@ -8,4 +8,5 @@
     <ListView fx:id="view" layoutY="49.0" prefHeight="376.0" prefWidth="248.0" AnchorPane.bottomAnchor="100" AnchorPane.leftAnchor="25" AnchorPane.rightAnchor="25" AnchorPane.topAnchor="50.0">
     </ListView>
     <Button layoutX="164.0" layoutY="413.0" onAction="#AddCard" text="Ajouter une Carte" />
+    <Button layoutX="453.0" layoutY="413.0" onAction="#Retour" text="Retour" />
 </AnchorPane>
