--- a/flashcards/src/main/resources/tn/flashcards/fxml/edit-view.fxml
+++ b/flashcards/src/main/resources/tn/flashcards/fxml/edit-view.fxml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 
 <BorderPane fx:id="container" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefWidth="1000.0" styleClass="view" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.flashcards.controller.EditController">
@@ -26,10 +28,25 @@
       </TableView>
    </center>
    <bottom>
-      <StackPane minHeight="60" prefHeight="60.0" prefWidth="970.0" BorderPane.alignment="BOTTOM_CENTER">
-         <children>
-            <Button minHeight="40" mnemonicParsing="false" onAction="#createPile" prefHeight="40.0" prefWidth="240.0" text="Créer une pile" textAlignment="CENTER" StackPane.alignment="BOTTOM_CENTER" />
-         </children>
-      </StackPane>
+      <BorderPane minHeight="60" prefHeight="60.0" prefWidth="970.0" BorderPane.alignment="BOTTOM_CENTER">
+         <center>
+             <HBox alignment="CENTER" BorderPane.alignment="CENTER">
+                 <Button fx:id="startBtn" minHeight="40" mnemonicParsing="false" onAction="#createPile" prefHeight="40.0" prefWidth="240.0" text="Créer une pile" textAlignment="CENTER" HBox.hgrow="SOMETIMES" StackPane.alignment="BOTTOM_CENTER">
+                  <HBox.margin>
+                     <Insets right="20.0" />
+                  </HBox.margin>
+                  <styleClass>
+                     <String fx:value="gradient_btn" />
+                     <String fx:value="btn_font" />
+                  </styleClass></Button>
+               <Button fx:id="importBtn" layoutX="376.0" layoutY="20.0" minHeight="40" mnemonicParsing="false" onAction="#createPile" prefHeight="40.0" prefWidth="240.0" text="Importer une pile" textAlignment="CENTER">
+                  <styleClass>
+                     <String fx:value="gradient_btn" />
+                     <String fx:value="btn_font" />
+                  </styleClass>
+               </Button>
+             </HBox>
+         </center>
+      </BorderPane>
    </bottom>
 </BorderPane>
