--- a/flashcards/src/main/resources/tn/flashcards/fxml/edit-pile-view.fxml
+++ b/flashcards/src/main/resources/tn/flashcards/fxml/edit-pile-view.fxml
@@ -3,10 +3,22 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="450.0" prefWidth="461.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.flashcards.controller.EditPileController">
-    <TextField fx:id="name" layoutX="14.0" layoutY="14.0" />
-    <ListView fx:id="view" layoutY="49.0" prefHeight="376.0" prefWidth="248.0" AnchorPane.bottomAnchor="100" AnchorPane.leftAnchor="25" AnchorPane.rightAnchor="25" AnchorPane.topAnchor="50.0">
-    </ListView>
-    <Button layoutX="164.0" layoutY="413.0" onAction="#AddCard" text="Ajouter une Carte" />
-    <Button layoutX="453.0" layoutY="413.0" onAction="#Retour" text="Retour" />
-</AnchorPane>
+<BorderPane prefWidth="1000.0" styleClass="view" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.flashcards.controller.EditPileController">
+    <top>
+        <TextField fx:id="name"/>
+    </top>
+    <center>
+        <ListView fx:id="view">
+        </ListView>
+    </center>
+    <bottom>
+        <StackPane>
+            <children>
+                <HBox alignment="BOTTOM_CENTER" spacing="50">
+                    <Button onAction="#AddCard" text="Ajouter une Carte" />
+                    <Button onAction="#Retour" text="Retour" />
+                </HBox>
+            </children>
+        </StackPane>
+    </bottom>
+</BorderPane>
