--- a/flashcards/src/main/resources/tn/flashcards/fxml/training-view.fxml
+++ b/flashcards/src/main/resources/tn/flashcards/fxml/training-view.fxml
@@ -6,6 +6,7 @@
 
 <?import tn.flashcards.view.QRView?>
 <?import javafx.geometry.Insets?>
+<?import atlantafx.base.controls.RingProgressIndicator?>
 <StackPane styleClass="view" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.flashcards.controller.TrainingController">
    <children>
       <Pane fx:id="pileList">
@@ -36,7 +37,15 @@
          </top>
 
          <center>
-            <HBox fx:id="cardView"/>
+            <HBox fx:id="cardView">
+               <Pane fx:id="question" styleClass="view"/>
+               <StackPane alignment="CENTER">
+                  <Pane fx:id="reponse" styleClass="view"/>
+                  <AnchorPane>
+                     <RingProgressIndicator AnchorPane.rightAnchor="350" AnchorPane.topAnchor="100" fx:id="timerRing" prefHeight="250" visible="false"/>
+                  </AnchorPane>
+               </StackPane>
+            </HBox>
          </center>
 
          <bottom>
