[ADD/EDIT] structure vue stats

--- a/flashcards/src/main/resources/tn/flashcards/css/style.css
+++ b/flashcards/src/main/resources/tn/flashcards/css/style.css
@@ -52,3 +52,9 @@
     -color-progress-indicator-fill: #3b812e;
 }
 
+.title {
+    -fx-font-size: 29px;
+    -fx-text-alignment: left;
+    -fx-font-family: "Bold";
+}
+
