--- a/flashcards/src/main/resources/tn/flashcards/fxml/stats-view.fxml
+++ b/flashcards/src/main/resources/tn/flashcards/fxml/stats-view.fxml
@@ -4,8 +4,17 @@
 <?import javafx.scene.layout.*?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.flashcards.controller.StatsController">
+<?import javafx.scene.control.skin.TabPaneSkin.TabControlButtons?>
+<HBox prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.flashcards.controller.StatsController">
    <children>
-      <Label alignment="CENTER" layoutX="243.0" layoutY="166.0" prefHeight="68.0" prefWidth="114.0" text="Statistiques" />
+      <ListView fx:id="lv" onMouseClicked="#printStats" styleClass="view; label" prefWidth="200.0">
+      </ListView>
+      <VBox fx:id="right" visible="false" styleClass="view">
+         <Label alignment="BASELINE_LEFT" styleClass="title" text="Activité" />
+         <Pane fx:id="statsActivity"/>
+         <Label alignment="BASELINE_LEFT" styleClass="title" text="Réponses" />
+         <Pane fx:id="statsAnswers"/>
+      </VBox>
+
    </children>
-</AnchorPane>
+</HBox>
