--- a/flashcards/src/main/resources/tn/flashcards/fxml/stats-view.fxml
+++ b/flashcards/src/main/resources/tn/flashcards/fxml/stats-view.fxml
@@ -5,16 +5,17 @@
 
 
 <?import javafx.scene.control.skin.TabPaneSkin.TabControlButtons?>
-<HBox prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.flashcards.controller.StatsController">
+<HBox prefHeight="400" prefWidth="1000" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.flashcards.controller.StatsController">
    <children>
       <ListView fx:id="lv" onMouseClicked="#printStats" styleClass="view; label" prefWidth="200.0">
       </ListView>
-      <VBox fx:id="right" visible="false" styleClass="view">
-         <Label alignment="BASELINE_LEFT" styleClass="title" text="Activité" />
-         <Pane fx:id="statsActivity"/>
-         <Label alignment="BASELINE_LEFT" styleClass="title" text="Réponses" />
-         <Pane fx:id="statsAnswers"/>
-      </VBox>
-
+      <ScrollPane fx:id="right" prefWidth="800" visible="false" styleClass="view" fitToWidth="true">
+         <VBox>
+            <Label fx:id="labelActivty" alignment="BASELINE_LEFT" styleClass="title" text="Activité" />
+            <Pane fx:id="statsActivity"/>
+            <Label fx:id="labelAnswers" alignment="BASELINE_LEFT" styleClass="title" text="Réponses" />
+            <Pane fx:id="statsAnswers"/>
+         </VBox>
+      </ScrollPane>
    </children>
 </HBox>
