--- a/flashcards/src/main/resources/tn/flashcards/css/style.css
+++ b/flashcards/src/main/resources/tn/flashcards/css/style.css
@@ -58,3 +58,23 @@
     -fx-font-family: "Bold";
 }
 
+.titleBox {
+    -fx-background-color: rgba(0, 0, 0, 0.11);
+    -fx-border-color: #000000;
+    -fx-border-width: 1px;
+    -fx-background-radius: 15;
+    -fx-border-radius: 15;
+}
+
+
+.titleBox .text-field {
+    -fx-background-color: rgba(0, 0, 0, 0);
+    -fx-border-width: 0px;
+    -fx-font-size: 21px;
+    -fx-font-family: "Arial";
+    -fx-font-weight: bold;
+}
+
+.popover > .border { -fx-stroke-width: 1; }
+
+
