--- a/flashcards/src/main/resources/tn/flashcards/fxml/edit-pile-view.fxml
+++ b/flashcards/src/main/resources/tn/flashcards/fxml/edit-pile-view.fxml
@@ -1,34 +1,84 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.Color?>
 
-<BorderPane prefWidth="1000.0" styleClass="view" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.flashcards.controller.EditPileController">
+<BorderPane styleClass="view" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.flashcards.controller.EditPileController">
     <top>
-      <VBox>
-         <children>
-              <TextField fx:id="name" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="24.0" prefWidth="341.0" />
-            <TextField fx:id="desc" />
-         </children>
-      </VBox>
+        <HBox fillHeight="false">
+            <children>
+<!--                <TextField fx:id="name" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="24.0" prefWidth="341.0" promptText="Saisir Titre">
+               <HBox.margin>
+                  <Insets bottom="10.0" right="50.0" />
+               </HBox.margin></TextField>-->
+                <Pane prefHeight="55.0" prefWidth="368.0" styleClass="titleBox">
+                    <effect>
+                        <DropShadow height="50.73" offsetX="3.0" offsetY="3.0" radius="24.947499999999998" spread="0.43" width="51.06">
+                            <color>
+                                <Color opacity="0.24877959489822388" />
+                            </color>
+                        </DropShadow>
+                    </effect>
+                    <children>
+                        <TextField id="pageTitleField" fx:id="name" layoutX="64.0" layoutY="9.0" maxWidth="400.0" onKeyTyped="#setTitre" prefWidth="300.0" promptText="Titre de la pile" style="-fx-border-radius: 2px;" stylesheets="@../css/style.css" text="xdfdsf">
+                        </TextField>
+                        <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="14.0" layoutY="8.0" pickOnBounds="true">
+                            <image>
+                                <Image url="@../img/pen.png" />
+                            </image>
+                        </ImageView>
+                    </children>
+               <HBox.margin>
+                  <Insets left="15.0" right="30.0" top="30.0" />
+               </HBox.margin>
+                </Pane>
+            <TextArea fx:id="desc" prefHeight="120.0" promptText="Saisir description" wrapText="true" />
+            </children>
+         <BorderPane.margin>
+            <Insets right="30.0" top="5.0" />
+         </BorderPane.margin>
+        </HBox>
     </top>
     <center>
         <ListView fx:id="view">
-        </ListView>
+         <BorderPane.margin>
+            <Insets top="15.0" />
+         </BorderPane.margin></ListView>
     </center>
     <bottom>
         <StackPane>
             <children>
-                <HBox alignment="BOTTOM_CENTER" spacing="50">
-                    <Button onAction="#AddCard" text="Ajouter une Carte" />
-                    <Button onAction="#Retour" text="Retour" />
+                <HBox alignment="CENTER" BorderPane.alignment="CENTER">
+                    <Button minHeight="40" mnemonicParsing="false" onAction="#AddCard" prefHeight="40.0" prefWidth="240.0" text="Ajouter une Carte" textAlignment="CENTER" HBox.hgrow="SOMETIMES" StackPane.alignment="BOTTOM_CENTER">
+                        <HBox.margin>
+                            <Insets right="20.0" />
+                        </HBox.margin>
+                        <styleClass>
+                            <String fx:value="btn_font" />
+                        </styleClass>
+                    </Button>
+                    <Button layoutX="376.0" layoutY="20.0" minHeight="40" mnemonicParsing="false" onAction="#Retour" prefHeight="40.0" prefWidth="240.0" text="Retour" textAlignment="CENTER">
+                        <styleClass>
+                            <String fx:value="btn_font" />
+                        </styleClass>
+                    </Button>
                 </HBox>
             </children>
+         <BorderPane.margin>
+            <Insets top="15.0" />
+         </BorderPane.margin>
         </StackPane>
     </bottom>
 </BorderPane>
