--- a/flashcards/src/main/resources/tn/flashcards/fxml/edit-cell.fxml
+++ b/flashcards/src/main/resources/tn/flashcards/fxml/edit-cell.fxml
@@ -1,20 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.ToggleGroup?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<HBox maxHeight="200.0" maxWidth="-Infinity" minHeight="200.0" minWidth="-Infinity" prefHeight="200.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.flashcards.controller.EditCardCellController">
+<HBox maxHeight="200.0" maxWidth="-Infinity" minHeight="200.0" minWidth="-Infinity" prefHeight="200.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.flashcards.controller.EditCardCellController">
    <padding>
       <Insets bottom="10.0" />
    </padding>
@@ -23,7 +15,7 @@
          <children>
             <VBox alignment="CENTER" AnchorPane.leftAnchor="22.0" AnchorPane.topAnchor="67.0">
                <children>
-                  <RadioButton mnemonicParsing="false" onAction="#q_txt_btn" prefWidth="70.0" selected="true" text="Texte">
+                  <RadioButton fx:id="q_txt_btn" mnemonicParsing="false" onAction="#q_txt_btn" prefWidth="70.0" selected="true" text="Texte">
                      <toggleGroup>
                         <ToggleGroup fx:id="QGroup" />
                      </toggleGroup>
@@ -31,7 +23,7 @@
                         <Insets bottom="2.0" />
                      </VBox.margin>
                   </RadioButton>
-                  <RadioButton mnemonicParsing="false" onAction="#q_img_btn" prefWidth="70.0" text="Image" toggleGroup="$QGroup">
+                  <RadioButton fx:id="q_img_btn" mnemonicParsing="false" onAction="#q_img_btn" prefWidth="70.0" text="Image" toggleGroup="$QGroup">
                      <VBox.margin>
                         <Insets top="2.0" />
                      </VBox.margin>
@@ -47,7 +39,7 @@
                <children>
                   <AnchorPane fx:id="q_txt_pane" maxWidth="400.0" StackPane.alignment="CENTER">
                      <children>
-                        <TextArea fx:id="q_txt_area" maxWidth="400.0" prefHeight="140.0" prefWidth="315.0" promptText="Saisir la question" AnchorPane.rightAnchor="22.0">
+                        <TextArea fx:id="q_txt_area" maxWidth="400.0" onKeyTyped="#q_textarea" prefHeight="140.0" prefWidth="315.0" promptText="Saisir la question" styleClass="qr_area" stylesheets="@../css/style.css" wrapText="true" AnchorPane.rightAnchor="22.0">
                            <font>
                               <Font size="17.0" />
                            </font></TextArea>
@@ -69,7 +61,7 @@
          <children>
             <VBox alignment="CENTER" AnchorPane.leftAnchor="22.0" AnchorPane.topAnchor="67.0">
                <children>
-                  <RadioButton mnemonicParsing="false" onAction="#r_txt_btn" prefWidth="70.0" selected="true" text="Texte">
+                  <RadioButton fx:id="r_txt_btn" mnemonicParsing="false" onAction="#r_txt_btn" prefWidth="70.0" selected="true" text="Texte">
                      <VBox.margin>
                         <Insets bottom="2.0" />
                      </VBox.margin>
@@ -77,7 +69,7 @@
                         <ToggleGroup fx:id="RGroup" />
                      </toggleGroup>
                   </RadioButton>
-                  <RadioButton mnemonicParsing="false" onAction="#r_img_btn" prefWidth="70.0" text="Image" toggleGroup="$RGroup">
+                  <RadioButton fx:id="r_img_btn" mnemonicParsing="false" onAction="#r_img_btn" prefWidth="70.0" text="Image" toggleGroup="$RGroup">
                      <VBox.margin>
                         <Insets top="2.0" />
                      </VBox.margin>
@@ -92,7 +84,7 @@
                <children>
                   <AnchorPane fx:id="r_txt_pane" maxWidth="400.0" StackPane.alignment="CENTER">
                      <children>
-                        <TextArea fx:id="r_txt_area" maxWidth="400.0" prefHeight="140.0" prefWidth="315.0" promptText="Saisir la réponse">
+                        <TextArea fx:id="r_txt_area" maxWidth="400.0" onKeyTyped="#r_textarea" prefHeight="140.0" prefWidth="315.0" promptText="Saisir la réponse" styleClass="qr_area" stylesheets="@../css/style.css" wrapText="true">
                            <font>
                               <Font name="Verdana" size="17.0" />
                            </font></TextArea>
