--- a/flashcards/src/main/resources/tn/flashcards/fxml/edit-pile-view.fxml
+++ b/flashcards/src/main/resources/tn/flashcards/fxml/edit-pile-view.fxml
@@ -1,21 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.DropShadow?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.paint.Color?>
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.text.*?>
 
-<BorderPane styleClass="view" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.flashcards.controller.EditPileController">
+<BorderPane styleClass="view" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.flashcards.controller.EditPileController">
     <top>
         <HBox fillHeight="false">
             <children>
@@ -44,7 +38,10 @@
                   <Insets left="15.0" right="30.0" top="30.0" />
                </HBox.margin>
                 </Pane>
-            <TextArea fx:id="desc" prefHeight="120.0" promptText="Saisir description" wrapText="true" />
+            <TextArea fx:id="desc" onKeyTyped="#setDesc" prefHeight="120.0" promptText="Saisir description" styleClass="qr_area" wrapText="true">
+               <font>
+                  <Font size="17.0" />
+               </font></TextArea>
             </children>
          <BorderPane.margin>
             <Insets right="30.0" top="5.0" />
@@ -65,14 +62,16 @@
                         <HBox.margin>
                             <Insets right="20.0" />
                         </HBox.margin>
-                        <styleClass>
-                            <String fx:value="btn_font" />
-                        </styleClass>
+                  <styleClass>
+                     <String fx:value="btn_font" />
+                     <String fx:value="gradient_btn" />
+                  </styleClass>
                     </Button>
                     <Button layoutX="376.0" layoutY="20.0" minHeight="40" mnemonicParsing="false" onAction="#Retour" prefHeight="40.0" prefWidth="240.0" text="Retour" textAlignment="CENTER">
-                        <styleClass>
-                            <String fx:value="btn_font" />
-                        </styleClass>
+                  <styleClass>
+                     <String fx:value="btn_font" />
+                     <String fx:value="gradient_btn" />
+                  </styleClass>
                     </Button>
                 </HBox>
             </children>
